// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterListContainer should display characters list 1`] = `
<Connect(CharacterListContainer)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <CharacterListContainer
    characters={
      Array [
        Object {},
        Object {},
      ]
    }
    dispatch={[Function]}
    orderBy="name"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div
      className="container"
    >
      <Component />
      <Component
        characters={
          Array [
            Object {},
            Object {},
          ]
        }
      />
    </div>
  </CharacterListContainer>
</Connect(CharacterListContainer)>
`;

exports[`CharacterListContainer should display loading message while loading 1`] = `
<Connect(CharacterListContainer)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <CharacterListContainer
    dispatch={[Function]}
    isLoading={true}
    orderBy="name"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <div
      className="container"
    >
      <Component />
      <p>
        Loading...
      </p>
    </div>
  </CharacterListContainer>
</Connect(CharacterListContainer)>
`;
